# route53-dyndns

./: Cargo.toml  Dockerfile  README.md  codecov.yml  example-config.yaml
.github/: dependabot.yml
.github/scripts/: auth.sh  create_test_bin.sh  functional_test.sh  generate_report.sh
.github/workflows/: main.yml
src/: clap-config.yml  clap_config.rs  config.rs  logger.rs  main.rs
src/handler/: mod.rs  route53_handler.rs  types.rs
src/ip/: ip_adapter.rs  mod.rs  types.rs
src/route53/: mod.rs  route53_adapter.rs  types.rs
src/route53/route53_adapter/: route53_client_mock.rs
