[package]
name = "route53-dyndns"
version = "0.1.0"
authors = ["Daniel Henkel <daniel@henkel.tech>"]
edition = "2018"

[features]
# Treat warnings as build error
strict = []

[dependencies]
log = "0.4"
simplelog = "0.8.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.13"
clap = {version = "2.33.3", features = ["yaml"]}
rusoto_core = "0.44.0"
rusoto_route53 = "0.44.0"
reqwest = { version = "0.10.8", features = ["blocking"] }
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.10"
async-trait = "0.1.41"

[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt"]
